Add sample implementation of using prefab-cloud-django
* Add prefab libraries as requirements
* Configure Prefab client and logger in `settings.py`
* Show location-based logging examples in prefab views
* Add templates exercising the templatetags from prefab-cloud-django

--- a/prefab/templates/prefab/index.html
+++ b/prefab/templates/prefab/index.html
@@ -1,1 +1,15 @@
+{% load prefab_tags %}
+
 <h1>Django Prefab Demo</h1>
+
+<p>
+<strong>features.feature-1</strong>: {% prefab_get "features.feature-1" context=context %}
+</p>
+
+<p>
+<strong>features.feature-1</strong>: {% prefab_enabled "features.feature-1" %}
+</p>
+
+<p>
+<strong>config.config-1</strong>: {% prefab_get "config.config-1" %}
+</p>
